validate the user input

--- a/custom_components/auckland_bin_collection/translations/en.json
+++ b/custom_components/auckland_bin_collection/translations/en.json
@@ -1,5 +1,9 @@
 {
     "config": {
+        "error": {
+            "invalid_id": "Location ID has to be 11 digits.",
+            "not_found": "Location not found."
+        },
         "step": {
             "user": {
                 "data": {
